; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_wdt.c_WatchdogLockState.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_wdt.c_WatchdogLockState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WDT_BASE = common dso_local global i64 0, align 8
@WDT_O_LOCK = common dso_local global i64 0, align 8
@WDT_LOCK_LOCKED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WatchdogLockState(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @WDT_BASE, align 8
  %5 = icmp eq i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @ASSERT(i32 %6)
  %8 = load i64, i64* %2, align 8
  %9 = load i64, i64* @WDT_O_LOCK, align 8
  %10 = add i64 %8, %9
  %11 = call i64 @HWREG(i64 %10)
  %12 = load i64, i64* @WDT_LOCK_LOCKED, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 1, i32 0
  ret i32 %15
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
